style.css
body {
  background: url('images/fractal2_back.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    font-family: 'Helvetica Neue', Helvetica, sans-serif;
    letter-spacing: 1.5px;
}

h1, h2 {
  color: white;
  font-weight: 100;
  font-size: 40px;
  margin: 0px;
}

h6 {
  color: white;
  font-weight: 100;
  font-size: 25px;
  margin: 20px;
}

p {
  color: white;
  font-weight: 200;
  font-size: 1.25em;
}

#home_section, #about_section {
  height: 100%;
}

.box {
  background-color: rgba(0,0,0,0.10);
  padding: 20px;
  width: 50%;
  text-align: center;
  float: left;
}

.box_main {
  background-color: rgba(0,0,0,0.5);
  padding: 20px;
  width: 75%;
  margin: 15% auto;
  text-align: center;
}

.box_contact {
  background-color: rgba(0,0,0,0.10);
  padding: 20px;
  width: 50%;
  margin: 15% auto;
  text-align: center;
}

.navbox{
  background-color: rgba(0,0,0,0.10);
  padding: 20px;
  width: 75%;
  margin: 100px auto;
  margin: 10px auto;
  text-align: center;
}

a:link {
  color: white;
  text-decoration: none;
  font-weight: 100;
}

a:active {
  color: white;
  font-weight: 100;
}

a:hover {
  color: white;
  font-weight: 100;
  cursor: pointer;
}

a:visited {
  color: white;
  text-decoration: none;
  font-weight: 100;
}

a {
  color: white;
  font-weight: 200;
  font-size: 1.25em;
}



@media screen and (max-width: 500px) {
  .box_main {
    font-size: 1em;
  }

  h1, h2 {
    font-size: 30px;
  }

  .ux_img, .web_img {
    width: 50%;
  }

  .emailtext {
    font-size: 13px;
  }

}

